src/scss/06_components/paragraphs/_content-cards.scss
$-card-spacing: $spacing-and-half;

.content-cards {
  display: flex;
  flex-direction: column;
  margin-bottom: 0;
  margin-top: 0;

  @include breakpoint($breakpoint-s) {
    flex-direction: row;
    flex-wrap: wrap;
    margin-left: -$-card-spacing;
    width: calc(100% + #{$-card-spacing});
  }
}

.content-card {
  margin-top: $spacing-quadruple;
  position: relative;

  @include breakpoint($breakpoint-s) {
    margin-left: $-card-spacing;
    width: calc(50% - #{$-card-spacing});
  }

  @include breakpoint($breakpoint-l) {
    width: calc(25% - #{$-card-spacing});
  }

  &:first-child {
    margin-top: 0;
  }
}

.content-card__image {
  line-height: 0;

  img {
    @include image-defaults($width: 100%, $max-width: null);
    @include loading-image-background;
  }
}

.content-card__title {
  @include heading-hyphens;
  @include font('h4');
  display: block;
  margin-top: $spacing;
}

.content-card__date {
  margin-top: $spacing-half;
}

.content-card__link {
  display: block;
  overflow: hidden;
  text-decoration: none;

  &::before {
    content: '';
    inset: 0;
    position: absolute;
  }

  &::after {
    @include hover-link-arrow-transition;

    --icon-size: 2rem;
    margin-left: -2px; // Pull the arrow a bit to the left to align with text.
    margin-top: $spacing;

    @include pseudo-icon('arrow-right');

    @include breakpoint($breakpoint-s) {
      --icon-size: 3rem;
      margin-left: -4px; // Pull the arrow a bit to the left to align with text.
    }
  }

  &:focus,
  &:hover {
    .content-card__title {
      text-decoration: underline;
    }

    &::after {
      transform: translateX($spacing);

      @media (prefers-reduced-motion) {
        transform: none;
      }
    }
  }
}

.content-card--unpublished {
  outline: 2px solid var(--color-error);
  outline-offset: $spacing-quarter;

  .content-card__link {
    color: var(--color-error);

    &::after {
      background-color: var(--color-error);
    }
  }
}

.component--content-cards-large {
  .content-card {
    @include breakpoint($breakpoint-s) {
      margin-left: $-card-spacing;
      width: calc(50% - #{$-card-spacing});
    }

    @include breakpoint($breakpoint-l) {
      width: calc(33.3333% - #{$-card-spacing});
    }
  }
}

.component--content-cards-grey {
  background: $color-silver-light;
  display: grid;
  grid-template-columns: [full-width-start] var(--component-gap, #{$spacing}) [content-start] 1fr [content-end] var(--component-gap) [full-width-end] ;
  grid-template-rows: [header-start] auto [header-end] auto;
  padding-top: 0;

  @include breakpoint($breakpoint-m) {
    --component-gap: #{$spacing-double};
  }

  .hds-koros {
    color: $color-white;
    grid-column: full-width;
    grid-row: header;

    // Koro should not be visible unless the component is on the components lower region or landing page.
    :not(.page-type--landing-page).wrapper .components--upper & {
      display: none;
    }
  }

  .component__container {
    grid-column: content;
    padding-top: $spacing;

    @include breakpoint($breakpoint-m) {
      padding-top: $spacing-double;
    }
  }

  .content-card__link {
    background-color: $color-white;
    padding: $spacing;
  }
}

// The koro is not visible on these occasions so the padding needs to be removed as well.
:not(.page-type--landing-page).wrapper .components:not(.components--lower) {
  .component--content-cards-grey .component__container {
    padding-top: 0;
  }
}

.component--content-cards-small {
  .content-card {
    &:nth-child(-n+2) {
      @include breakpoint($breakpoint-s) {
        margin-top: 0;
      }
    }

    &:nth-child(-n+4) {
      @include breakpoint($breakpoint-l) {
        margin-top: 0;
      }
    }
  }
}

.component--content-cards-large {
  .content-card {
    &:nth-child(-n+2) {
      @include breakpoint($breakpoint-s) {
        margin-top: 0;
      }
    }

    &:nth-child(-n+3) {
      @include breakpoint($breakpoint-l) {
        margin-top: 0;
      }
    }
  }
}

// If the content-cards with grey design is just before footer.
.layout-main-wrapper > *:last-child .component--content-cards-grey:last-child {
  margin-bottom: -115px; // Enough to get the block under the footer.
  padding-bottom: 55px; // Leave enough room between the last card and footer.
}

